--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fffcf7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: grey;
+  font-family: sans-serif;
 }
 
 .App-link {
@@ -36,3 +37,4 @@
     transform: rotate(360deg);
   }
 }
+
