--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #fffcf7;
+  background-color: #f5f5f2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,5 +36,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.line {
+  height: 2px;
+  width: 100%;
+  background-color: #000;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: rgb(97, 92, 92);
 }
 
