--- a/src/components/Style/Navbar.css
+++ b/src/components/Style/Navbar.css
@@ -1,3 +1,4 @@
+
 .navbar-nav .nav-link:hover {
     background-color: #f8f9fa;
   }
@@ -15,10 +16,9 @@
     font-weight: 700;
     font-style: bold;
     color: black;
-  
+    margin: 20px;
     /* Add some padding and margin to the links */
     padding: 0 20px;
-    margin: 0;
   
     /* Remove the default list style */
     list-style: none;
@@ -34,11 +34,27 @@
     text-decoration: none;
     color: #4d9494;    ;
     font-family: "Times New Roman", serif;
+    margin: 40px;
   }
   
   .navbar-brand {
     text-decoration: none;
-    color: #4d9496;    ;
+    color: #5e6262;    ;
     font-family: "Times New Roman", serif;
+    font-size: larger;
+  }
+  
+  .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+  }
+
+  .blended-image {
+    background-image: url('./profile.jpeg');
+    background-blend-mode: multiply;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
   
