--- a/src/components/Style/Navbar.css
+++ b/src/components/Style/Navbar.css
@@ -58,3 +58,28 @@
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
   
+  .outer-div{
+     width: 90%;
+     transform: translateX(100px);
+     transition: all 1s ease-in-out;
+     
+     
+    
+  }
+
+  .outer-div.active {
+    transform: translateX(0);
+  }
+
+
+  #my-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+
+
+
+.smaller-div {
+  width: 50%;
+  }
