--- a/src/components/Style/Navbar.css
+++ b/src/components/Style/Navbar.css
@@ -57,6 +57,11 @@
     background-blend-mode: multiply;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
+
+  .diagonal-image {
+    display: none;
+}
+
   
   .outer-div{
      width: 90%;
@@ -70,6 +75,29 @@
   .outer-div.active {
     transform: translateX(0);
   }
+
+  .outer-div {
+    background-image: url('../images/Pashmina_Photo-2.jpg');
+    background-size: cover; /* adjust as needed */
+    background-position: center; /* adjust as needed */
+    border: 2px solid #333;
+    box-shadow: 2px 2px 10px #333;
+
+
+}
+
+.outer-div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/Pashmina_Photo-2.jpg');
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+}
 
 
   #my-img {
